fix(core/avatar): replace ix-component import with scrollbar import

--- a/packages/core/src/components/avatar/avatar.scss
+++ b/packages/core/src/components/avatar/avatar.scss
@@ -11,10 +11,10 @@
 @import 'mixins/text-truncation';
 @import 'mixins/hover';
 @import './../button/button-mixin';
-@import 'mixins/shadow-dom/component';
+@import 'mixins/scrollbar';
 
 :host {
-  @include ix-component;
+  @include scrollbar();
   display: flex;
   position: relative;
   width: fit-content;
